force-app/main/default/objects/Account/fields/Avg_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Avg_of_Opportunity__c</fullName>
    <label>Avg of Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>