force-app/main/default/objects/Account/fields/Bill_To_Acc__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Acc__c</fullName>
    <label>Bill To Acc</label>
    <length>18</length>
    <type>Text</type>
</CustomField>