force-app/main/default/objects/Account/fields/Max_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Max_of_Opportunity__c</fullName>
    <label>Max of Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>