force-app/main/default/objects/Account/fields/Min_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Min_of_Opportunity__c</fullName>
    <label>Min of Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>