force-app/main/default/objects/Account/fields/nameFormula__c.field-meta.xml
<CustomField>
    <fullName>nameFormula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nameFormula</label>
    <type>Text</type>
</CustomField>