force-app/main/default/objects/Account/fields/No_of_associated_opportunity__c.field-meta.xml
<CustomField>
    <fullName>No_of_associated_opportunity__c</fullName>
    <label>No of associated opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>